--- a/style.css
+++ b/style.css
@@ -109,7 +109,7 @@ background-color: #ebdada;
 .contact-box{
    padding: 60px;
     margin-left: 150px;
-    background-color: #ecdaa7;
+    background-color: rgb(192, 146, 61);
     border-radius: 20px;
 }
 .contact-box input{
